Kinda fixed wrap-around of bookboxes in ddtemplates (frontend)

--- a/assets/css/nubook.user.ddtemplates.css
+++ b/assets/css/nubook.user.ddtemplates.css
@@ -49,6 +49,12 @@
     flex-grow: 1;
 }
 
+@media screen and (min-width: 782px) {
+    .ws-fpr-description {
+        max-width: 70vw;
+    }
+}
+
 /*.user-template-flex::after {
     content: "";
     flex: 0 1 30%;
